--- a/_config.yml
+++ b/_config.yml
@@ -81,11 +81,11 @@ analytics:
 # Site Author
 author:
   name             : "Etienne Bennequin"
-  avatar           : "profile.png"
+  avatar           : "profile.jpeg"
   bio              : "Ph.D student working on real life Few-Shot Learning."
   location         : "Paris"
   employer         :
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  pubmed           :
   googlescholar    : "https://scholar.google.com/citations?user=a8e5iNgAAAAJ&hl=fr"
   email            :
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
@@ -100,16 +100,16 @@ author:
   google_plus      :
   keybase          :
   instagram        :
-  impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
+  impactstory      :
   lastfm           :
-  linkedin         :
-  orcid            : "http://orcid.org/yourorcidurl"
+  linkedin         : "etienne-bennequin-55931a101"
+  orcid            :
   pinterest        :
   soundcloud       :
-  stackoverflow    : # http://stackoverflow.com/users/123456/username
+  stackoverflow    :
   steam            :
   tumblr           :
-  twitter          : "replacethistwitterhandle"
+  twitter          : "EBennequin"
   vine             :
   weibo            :
   xing             :
