--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Etienne Bennequin"
 title_separator          : "-"
 name                     : &name "Etienne Bennequin"
 description              : &description "Ph.D student with CentraleSupélec and Sicara."
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://ebennequin.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "ebennequin/ebennequin.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
