--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,11 +3,5 @@ main:
   - title: "Publications"
     url: /publications/
 
-  - title: "Talks"
-    url: /talks/    
-
-  - title: "Blog Posts"
-    url: /year-archive/
-    
-  - title: "Guide"
-    url: /markdown/
+ - title: "Videos"
+   url: /videos/
