--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   avatar           : "profile.jpeg"
   bio              : "Ph.D student working on real life Few-Shot Learning."
   location         : "Paris"
-  employer         :
+  employer         : "Sicara"
   pubmed           :
   googlescholar    : "https://scholar.google.com/citations?user=a8e5iNgAAAAJ&hl=fr"
   email            :
