I defended my thesis

--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Etienne Bennequin"
   avatar           : "profile.jpeg"
-  bio              : "Ph.D student working on real life Few-Shot Learning."
+  bio              : "Ph.D. in Machine Learning from Université Paris-Saclay."
   location         : "Paris"
   employer         :
   pubmed           :
